infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-hom
---
apiVersion: v1
kind: Namespace
metadata:
  name: weather-prod
