infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-web
  namespace: weather-app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: weather-web
  template:
    metadata:
      labels:
        app: weather-web
    spec:
      containers:
        - name: weather-web
          image: mainiere/weather-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 128m
              memory: 128Mi

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
