infra/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: weather-api

spec:
  type: ClusterIP
  selector:
    app: weather-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
