infra/kubernetes/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: weather-api

spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: prod.weather.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-api
                port:
                  number: 8002
